--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<img class="og" src="images/common/og-img.png" alt="og">
 	<section id="start" class="container">
 		<div id="class-container-title" class="container-title">
-			<span class="title-line"></span>
+			<div class="title-line"><span></span></div>
 			<p class="title">올 여름 필.수.클래스</p>
 		</div>
 		<div class="container-content">
@@ -168,7 +168,7 @@
 	</section>
 	<section class="container">
 		<div id="rental-container-title" class="container-title">
-			<span class="title-line"></span>
+			<div class="title-line"><span></span></div>
 			<p class="title">대여도 가능합니다</p>
 		</div>
 		<div class="container-content">
@@ -230,18 +230,18 @@
 				<div class="insta-tab pic1">
 					<img src="images/common/pic1.jpg" alt="펭귄서프클럽 인스타그램">
 					<div class="img-filter"></div>
-					<span>#펭귄서프클럽</span>
+					<p><span>#펭귄서프클럽</span></p>
 				</div>
 				<div class="pic3-wrapper">
 					<div class="pic3">
 						<img src="images/common/pic3-1.jpg" alt="그 여름날의 추억">
 						<div class="img-filter"></div>
-						<span>#그 여름날의 추억</span>
+						<p><span>#그 여름날의 추억</span></p>
 					</div>
 					<div class="pic3">
 						<img src="images/common/pic3-2.jpg" alt="서핑스냅">
 						<div class="img-filter"></div>
-						<span>#서핑스냅</span>
+						<p><span>#서핑스냅</span></p>
 					</div>
 				</div>
 			</div>
@@ -249,17 +249,17 @@
 				<div class="insta-tab pic2">
 					<img src="images/common/pic2.jpg" alt="즐거운서핑클럽">
 					<div class="img-filter"></div>
-					<span>#즐거운서핑클럽</span>
+					<p><span>#즐거운서핑클럽</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-3.jpg" alt="여름엔 바다">
 					<div class="img-filter"></div>
-					<span>#여름엔 바다</span>
+					<p><span>#여름엔 바다</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-4.jpg" alt="서핑보드대여">
 					<div class="img-filter"></div>
-					<span>#서핑보드대여</span>
+					<p><span>#서핑보드대여</span></p>
 				</div>
 			</div>
 		</div>
@@ -270,16 +270,16 @@
 			</div>
 			<div class="footer-sns">
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
-					<div class="sns-tab__tooltip">팔로우</div>
+					<img class="sns-tab__icon" src="images/common/sns-insta.png" alt="인스타그램">
+					<div class="sns-tab__tooltip"><span>팔로우</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
-					<div class="sns-tab__tooltip">페이지</div>
+					<img class="sns-tab__icon" src="images/common/sns-fb.png" alt="페이스북">
+					<div class="sns-tab__tooltip"><span>페이지</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
-					<div class="sns-tab__tooltip">소식보기</div>
+					<img class="sns-tab__icon" src="images/common/sns-tweeter.png" alt="트위터">
+					<div class="sns-tab__tooltip"><span>소식보기</span></div>
 				</div>
 			</div>
 			<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
