--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
 	</section>
 	<section id="start" class="container">
 		<div id="map-container-title" class="container-title">
-			<span class="title-line"></span>
+			<div class="title-line"><span></span></div>
 			<p class="title">서울에서 1시간 20분!</p>
 		</div>
 		<div class="container-content">
@@ -85,8 +85,8 @@
 		</div>
 	</section>
 	<section class="container">
-		<div class="container-title">
-			<span class="title-line"></span>
+		<div id="introduce-container-title" class="container-title">
+			<div class="title-line"><span></span></div>
 			<p class="title">소개합니다</p>
 		</div>
 		<div class="container-content">
@@ -138,10 +138,12 @@
 	</section>
 	<section class="container">
 		<div id="snap-container-title" class="container-title">
-			<span class="title-line"></span>
+			<div class="title-line"><span></span></div>
 			<p class="title">여름, 그 순간들</p>
 			<p class="description">그 때 그 즐거움을 그대로 간직할 수 있도록 스냅촬영과 함께 하세요. 클래스와 함께 예약하시면 저렴한 가격으로 진행가능합니다.</p>
-			<span class="button">예약하기</span>
+			<div class="button">
+				<span class="button-tab">예약하기</span>
+			</div>
 		</div>
 		<div class="container-content">
 			<div class="gallery-wrapper">
@@ -191,18 +193,18 @@
 				<div class="insta-tab pic1">
 					<img src="images/common/pic1.jpg" alt="펭귄서프클럽 인스타그램">
 					<div class="img-filter"></div>
-					<span>#펭귄서프클럽</span>
+					<p><span>#펭귄서프클럽</span></p>
 				</div>
 				<div class="pic3-wrapper">
 					<div class="pic3">
 						<img src="images/common/pic3-1.jpg" alt="그 여름날의 추억">
 						<div class="img-filter"></div>
-						<span>#그 여름날의 추억</span>
+						<p><span>#그 여름날의 추억</span></p>
 					</div>
 					<div class="pic3">
 						<img src="images/common/pic3-2.jpg" alt="서핑스냅">
 						<div class="img-filter"></div>
-						<span>#서핑스냅</span>
+						<p><span>#서핑스냅</span></p>
 					</div>
 				</div>
 			</div>
@@ -210,17 +212,17 @@
 				<div class="insta-tab pic2">
 					<img src="images/common/pic2.jpg" alt="즐거운서핑클럽">
 					<div class="img-filter"></div>
-					<span>#즐거운서핑클럽</span>
+					<p><span>#즐거운서핑클럽</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-3.jpg" alt="여름엔 바다">
 					<div class="img-filter"></div>
-					<span>#여름엔 바다</span>
+					<p><span>#여름엔 바다</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-4.jpg" alt="서핑보드대여">
 					<div class="img-filter"></div>
-					<span>#서핑보드대여</span>
+					<p><span>#서핑보드대여</span></p>
 				</div>
 			</div>
 		</div>
@@ -231,16 +233,16 @@
 			</div>
 			<div class="footer-sns">
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
-					<div class="sns-tab__tooltip">팔로우</div>
+					<img class="sns-tab__icon" src="images/common/sns-insta.png" alt="인스타그램">
+					<div class="sns-tab__tooltip"><span>팔로우</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
-					<div class="sns-tab__tooltip">페이지</div>
+					<img class="sns-tab__icon" src="images/common/sns-fb.png" alt="페이스북">
+					<div class="sns-tab__tooltip"><span>페이지</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
-					<div class="sns-tab__tooltip">소식보기</div>
+					<img class="sns-tab__icon" src="images/common/sns-tweeter.png" alt="트위터">
+					<div class="sns-tab__tooltip"><span>소식보기</span></div>
 				</div>
 			</div>
 			<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
