--- a/class.html
+++ b/class.html
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="container-wave flip">
+	<section class="container-wave flip first">
 		<img src="images/class/wave.jpg" alt="파도배경">
 	</section>
 	<section class="container-class">
@@ -494,18 +494,18 @@
 				<div class="insta-tab pic1">
 					<img src="images/common/pic1.jpg" alt="펭귄서프클럽 인스타그램">
 					<div class="img-filter"></div>
-					<span>#펭귄서프클럽</span>
+					<p><span>#펭귄서프클럽</span></p>
 				</div>
 				<div class="pic3-wrapper">
 					<div class="pic3">
 						<img src="images/common/pic3-1.jpg" alt="그 여름날의 추억">
 						<div class="img-filter"></div>
-						<span>#그 여름날의 추억</span>
+						<p><span>#그 여름날의 추억</span></p>
 					</div>
 					<div class="pic3">
 						<img src="images/common/pic3-2.jpg" alt="서핑스냅">
 						<div class="img-filter"></div>
-						<span>#서핑스냅</span>
+						<p><span>#서핑스냅</span></p>
 					</div>
 				</div>
 			</div>
@@ -513,17 +513,17 @@
 				<div class="insta-tab pic2">
 					<img src="images/common/pic2.jpg" alt="즐거운서핑클럽">
 					<div class="img-filter"></div>
-					<span>#즐거운서핑클럽</span>
+					<p><span>#즐거운서핑클럽</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-3.jpg" alt="여름엔 바다">
 					<div class="img-filter"></div>
-					<span>#여름엔 바다</span>
+					<p><span>#여름엔 바다</span></p>
 				</div>
 				<div class="insta-tab pic3">
 					<img src="images/common/pic3-4.jpg" alt="서핑보드대여">
 					<div class="img-filter"></div>
-					<span>#서핑보드대여</span>
+					<p><span>#서핑보드대여</span></p>
 				</div>
 			</div>
 		</div>
@@ -534,16 +534,16 @@
 			</div>
 			<div class="footer-sns">
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-insta.svg" alt="인스타그램">
-					<div class="sns-tab__tooltip">팔로우</div>
+					<img class="sns-tab__icon" src="images/common/sns-insta.png" alt="인스타그램">
+					<div class="sns-tab__tooltip"><span>팔로우</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-fb.svg" alt="페이스북">
-					<div class="sns-tab__tooltip">페이지</div>
+					<img class="sns-tab__icon" src="images/common/sns-fb.png" alt="페이스북">
+					<div class="sns-tab__tooltip"><span>페이지</span></div>
 				</div>
 				<div class="sns-tab">
-					<img class="sns-tab__icon" src="images/common/sns-tweeter.svg" alt="트위터">
-					<div class="sns-tab__tooltip">소식보기</div>
+					<img class="sns-tab__icon" src="images/common/sns-tweeter.png" alt="트위터">
+					<div class="sns-tab__tooltip"><span>소식보기</span></div>
 				</div>
 			</div>
 			<div class="footer-rights">&copy; All rights reserver by Yujin Hwang 2019</div>
