--- a/index.html
+++ b/index.html
@@ -44,68 +44,133 @@
 	</header>
 	<section class="visual">
 		<div class="visual-container">
-			<div id=visual-slide-01 class="visual-slide current">
-				<div class="slide-main">
-					<div class="slide-main__bg">
-						<img src="images/index/slide-01.jpg" alt="펭귄서프클럽 수업 슬라이드" />
+			<div id="visual-slide-01" class="visual-slide">
+				<div class="visual-slide__top">
+					<div class="top-main-slide">
+						<div class="main-slide-img">
+							<div class="main-slide-wrapper">
+								<img src="images/index/slide-001.jpg" alt="첫번째 슬라이드">
+								<div class="main-slide-img__cover"></div>
+							</div>
+						</div>
+						<div class="main-slide-num">
+							<div class="main-slide-num__box">
+								<span>01</span>
+							</div>
+						</div>
 					</div>
-					<div class="slide-main__cont">
-						<div class="cont-title">서핑 수업 오픈</div>
-						<p class="cont-desc">완전 처음이라고 걱정은 NO! NO!</p>
-						<span class="cont-btn"><span class="cont-btn__name">수업 알아보기</span></span>
+					<div class="top-wave-text">
+						<div class="wave-text-wrapper">
+							<div class="wave-text">SURF</div>
+							<div class="wave-text-cover"></div>							
+						</div>
 					</div>
-					<div class="slide-num"><span>01</span></div>
 				</div>
-				<div class="slide-sub">
-					<img src="images/index/slide-02-sub.jpg" alt="펭귄서프클럽 대여 슬라이드">
+				<div class="visual-slide__bottom">
+					<div class="bottom-main-cont">
+						<div class="main-cont__title">
+							<div class="title-text">서핑 수업 오픈</div>
+							<div class="title-btn">
+								<span>자세히</span>
+							</div>
+						</div>
+						<div class="main-cont__desc">완전 처음이라고 걱정은 NO! NO! 수강 후 만족하는 사람들의 리뷰를 확인해보세요</div>
+						<div class="main-cont__bar"></div>
+					</div>
+					<div class="bottom-sub-slide">
+						<img src="images/index/slide-sub-001.jpg" alt="슬라이드">
+						<div class="sub-slide__cover"></div>
+					</div>
 				</div>
 			</div>
-			<div id=visual-slide-02 class="visual-slide">
-				<div class="slide-main">
-					<div class="slide-main__bg">
-						<img src="images/index/slide-02.jpg" alt="펭귄서프클럽 대여 슬라이드" />
+			<div id="visual-slide-02" class="visual-slide">
+				<div class="visual-slide__top">
+					<div class="top-main-slide">
+						<div class="main-slide-img">
+							<div class="main-slide-wrapper">
+								<img src="images/index/slide-002.jpg" alt="두번째 슬라이드">
+								<div class="main-slide-img__cover"></div>
+							</div>
+						</div>
+						<div class="main-slide-num">
+							<div class="main-slide-num__box">
+								<span>02</span>
+							</div>
+						</div>
 					</div>
-					<div class="slide-main__cont">
-						<div class="cont-title">대여해드립니다</div>
-						<p class="cont-desc">필요한 각종 장비가 구비되어있습니다</p>
-						<span class="cont-btn"><span class="cont-btn__name">대여 알아보기</span></span>
+					<div class="top-wave-text">
+						<div class="wave-text-wrapper">
+							<div class="wave-text">RENT</div>
+							<div class="wave-text-cover"></div>				
+						</div>
 					</div>
-					<div class="slide-num"><span>02</span></div>
 				</div>
-				<div class="slide-sub">
-					<img src="images/index/slide-03-sub.jpg" alt="펭귄서프클럽 대여 슬라이드">
+				<div class="visual-slide__bottom">
+					<div class="bottom-main-cont">
+						<div class="main-cont__title">
+							<div class="title-text">대여해드립니다</div>
+							<div class="title-btn">
+								<span>자세히</span>
+							</div>
+						</div>
+						<div class="main-cont__desc">재미를 누리기 위한 각종 장비들이 준비되어 있습니다. 취향에 맞는 보드를 찾아보세요</div>
+						<div class="main-cont__bar"></div>
+					</div>
+					<div class="bottom-sub-slide">
+						<img src="images/index/slide-sub-002.jpg" alt="슬라이드">
+						<div class="sub-slide__cover"></div>
+					</div>
 				</div>
 			</div>
-			<div id=visual-slide-03 class="visual-slide">
-				<div class="slide-main">
-					<div class="slide-main__bg">
-						<img src="images/index/slide-03.jpg" alt="펭귄서프클럽 스냅 슬라이드" />
+			<div id="visual-slide-03" class="visual-slide">
+				<div class="visual-slide__top">
+					<div class="top-main-slide">
+						<div class="main-slide-img">
+							<div class="main-slide-wrapper">
+								<img src="images/index/slide-003.jpg" alt="세번째 슬라이드">
+								<div class="main-slide-img__cover"></div>
+							</div>
+						</div>
+						<div class="main-slide-num">
+							<div class="main-slide-num__box">
+								<span>03</span>
+							</div>
+						</div>
 					</div>
-					<div class="slide-main__cont">
-						<div class="cont-title">최고의 순간들을<br>남기세요</div>
-						<p class="cont-desc">감각 넘치는 여름 화보를 찍어보세요</p>
-						<span class="cont-btn"><span class="cont-btn__name">스냅 알아보기</span></span>
+					<div class="top-wave-text">
+						<div class="wave-text-wrapper">
+							<div class="wave-text">SNAP</div>
+							<div class="wave-text-cover"></div>				
+						</div>
 					</div>
-					<div class="slide-num"><span>03</span></div>
 				</div>
-				<div class="slide-sub">
-					<img src="images/index/slide-01-sub.jpg" alt="펭귄서프클럽 대여 슬라이드">
+				<div class="visual-slide__bottom">
+					<div class="bottom-main-cont">
+						<div class="main-cont__title">
+							<div class="title-text">인생화보 남기기</div>
+							<div class="title-btn">
+								<span>자세히</span>
+							</div>
+						</div>
+						<div class="main-cont__desc">서핑을 즐기는 것 뿐만 아니라 그 순간을 화보로 간직해보세요. 전문가 수준의 촬영을 경험하실 수 있습니다.</div>
+						<div class="main-cont__bar"></div>
+					</div>
+					<div class="bottom-sub-slide">
+						<img src="images/index/slide-sub-003.jpg" alt="슬라이드">
+						<div class="sub-slide__cover"></div>
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="visual-dir">
 			<div class="dir-btn prev">
-				<img src="images/common/dir.png" alt="이전"/>
-				<span class="dir-btn__name">이전</span>
+				<img src="images/common/dir.png" alt="이전">
 			</div>
-			<div class="dir-line"></div>
 			<div class="dir-btn next">
-				<img src="images/common/dir.png" alt="다음"/>
-				<span class="dir-btn__name">다음</span>
+				<img src="images/common/dir.png" alt="다음">
 			</div>
 		</div>
 	</section>
-	<img class="og" src="images/common/og-img.png" alt="og">
 	<section id="start" class="container">
 		<div id="class-container-title" class="container-title">
 			<div class="title-line"><span></span></div>
