--- a/class.html
+++ b/class.html
@@ -164,7 +164,7 @@
 			</div>
 			<div class="class-info__cont">
 				<div class="info-cont__text">
-					<div class="text-title-line"></div>
+					<div class="text-title-line"><span></span></div>
 					<div class="text-title">서핑 클래스</div>
 					<div class="text-desc">초보자 코스는 물론 중급자, 고급자 코스까지 마련되어 있습니다. 경험이 풍부한 강사님이 진행하기 때문에 월등하게 실력이 향상되는 과정을 느끼실 수 있습니다.</div>
 				</div>
@@ -190,8 +190,8 @@
 		<div id="class-info-02" class="class-info">
 			<div class="class-info__cont">
 				<div class="info-cont__text">
-					<div class="text-title-line"></div>
-					<div class="text-title">수상스키 클래스</div>
+					<div class="text-title-line"><span></span></div>
+					<div class="text-title">패들보드 클래스</div>
 					<div class="text-desc">보드위에 타서 노를 저으며 즐기는 스포츠이며 비교적 전 연령대가 편하게 즐기실 수 있습니다. 넓은 바다의 여유를 느끼고 싶으시다면 추천드립니다.</div>
 				</div>
 				<div class="info-cont__benefit">
@@ -368,7 +368,7 @@
 			</div>
 			<div class="class-info__cont">
 				<div class="info-cont__text">
-					<div class="text-title-line"></div>
+					<div class="text-title-line"><span></span></div>
 					<div class="text-title">수상스키 클래스</div>
 					<div class="text-desc">모터보트에 연결해 스피드를 제대로 즐길 수 있는 매우 역동적인 스포츠입니다. 아이에서 어른까지 누구나 즐기실 수 있습니다.</div>
 				</div>
