--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
-		<div class="nav-mobile"></div>
+		<div class="nav-mobile">
+			<img src="images/common/mobile-menu.png" alt="모바일메뉴">
+		</div>
 		<a href="index.html" class="logo">
 			<div class="logo-symbol">
 				<img src="images/common/logo-white.svg" alt="펭귄서프클럽"/>
@@ -71,7 +73,7 @@
 						<div class="main-cont__title">
 							<div class="title-text">서핑 수업 오픈</div>
 							<div class="title-btn">
-								<span>자세히</span>
+								<a href="class.html">자세히</a>
 							</div>
 						</div>
 						<div class="main-cont__desc">완전 처음이라고 걱정은 NO! NO! 수강 후 만족하는 사람들의 리뷰를 확인해보세요</div>
@@ -110,7 +112,7 @@
 						<div class="main-cont__title">
 							<div class="title-text">대여해드립니다</div>
 							<div class="title-btn">
-								<span>자세히</span>
+								<a href="rent.html">자세히</a>
 							</div>
 						</div>
 						<div class="main-cont__desc">재미를 누리기 위한 각종 장비들이 준비되어 있습니다. 취향에 맞는 보드를 찾아보세요</div>
@@ -149,7 +151,7 @@
 						<div class="main-cont__title">
 							<div class="title-text">인생화보 남기기</div>
 							<div class="title-btn">
-								<span>자세히</span>
+								<a href="location.html#snap-container-title">자세히</a>
 							</div>
 						</div>
 						<div class="main-cont__desc">서핑을 즐기는 것 뿐만 아니라 그 순간을 화보로 간직해보세요. 전문가 수준의 촬영을 경험하실 수 있습니다.</div>
