--- a/class.html
+++ b/class.html
@@ -32,7 +32,9 @@
 				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
-		<div class="nav-mobile"></div>
+		<div class="nav-mobile">
+			<img src="images/common/mobile-menu.png" alt="모바일메뉴">
+		</div>
 		<a href="index.html" class="logo">
 			<div class="logo-symbol">
 				<img src="images/common/logo-white.svg" alt="펭귄서프클럽"/>
@@ -48,7 +50,7 @@
 		</div>
 		<div class="jumbotron-title">
 			<img src="images/common/icon-wave-white.png" alt="아이콘">
-			<p>서핑&패들보드&수상스키</p>
+			<p>서핑 & 패들보드 & 수상스키</p>
 		</div>
 	</section>
 	<section id="start" class="container">
