--- a/rent.html
+++ b/rent.html
@@ -30,7 +30,9 @@
 				<img src="images/common/dir.png" alt="속초 파도 LIVE 보러가기">
 			</a></div>
 		</nav>
-		<div class="nav-mobile"></div>
+		<div class="nav-mobile">
+			<img src="images/common/mobile-menu.png" alt="모바일메뉴">
+		</div>
 		<a href="index.html" class="logo">
 			<div class="logo-symbol">
 				<img src="images/common/logo-white.svg" alt="펭귄서프클럽"/>
@@ -536,6 +538,9 @@
 		</div>
 		<div class="shopbag-icon">
 			<img src="images/common/icon-shopbag-dark.png" alt="장바구니 아이콘">
+		</div>
+		<div class="mobile-active">
+			<span></span><span></span><span></span>
 		</div>
 	</div>
 	<footer class="footer">
