--- a/location.html
+++ b/location.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/location.css" />
 	<link rel="stylesheet" type="text/css" href="stylesheets/css/footer.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script type="text/javascript" src="lib/javascripts/jquery.paroller.min.js"></script>
 </head>
 <body>
 	<header class="header">
