--- a/class.html
+++ b/class.html
@@ -62,7 +62,7 @@
 						<img class="tab-img__icon-effect" src="images/common/icon-surf-effect.png" alt="서핑 아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">파도를 이용해 즐기는 스포츠</span>
-					<span class="icon-tab__title">서핑</span>
+					<a href="#class-info-01" class="icon-tab__title">서핑</a>
 				</div>
 				<div class="icon-tab">
 					<a href="#class-info-02" class="icon-tab__img">
@@ -70,7 +70,7 @@
 						<img class="tab-img__icon-effect" src="images/common/icon-paddle-effect.png" alt="패들보드 아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">물 위에서 노를 젓는 스포츠</span>
-					<span class="icon-tab__title">패들보드</span>
+					<a href="#class-info-02" class="icon-tab__title">패들보드</a>
 				</div>
 				<div class="icon-tab">
 					<a href="#class-info-03" class="icon-tab__img">
@@ -78,7 +78,7 @@
 						<img class="tab-img__icon-effect" src="images/common/icon-ski-effect.png" alt="수상스키아이콘 효과">
 					</a>
 					<span class="icon-tab__subtitle">속도를 즐기는 스포츠</span>
-					<span class="icon-tab__title">수상스키</span>
+					<a href="#class-info-03" class="icon-tab__title">수상스키</a>
 				</div>
 			</div>
 		</div>
